[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/gui/credits/credits.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/font_medium.tres" type="Theme" id=2]
[ext_resource path="res://textures/buttons/back.svg" type="Texture" id=3]
[ext_resource path="res://addons/utils/button_highlighter.gd" type="Script" id=4]
[ext_resource path="res://resources/themes/font_small.tres" type="Theme" id=5]
[ext_resource path="res://addons/simple-gui-transitions/transition.gd" type="Script" id=6]
[ext_resource path="res://textures/buttons/mask.png" type="BitMap" id=7]
[ext_resource path="res://scenes/gui/background/background.tscn" type="PackedScene" id=8]
[ext_resource path="res://textures/buttons/button_focus.svg" type="Texture" id=9]

[node name="Credits" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="GuiTransition" type="Node" parent="."]
script = ExtResource( 6 )
layout = NodePath("..")
controls = [ NodePath("../HBoxContainer/VBoxContainerLeft/HBoxContainer/ButtonBack"), NodePath("../HBoxContainer/VBoxContainer/Label"), NodePath("../HBoxContainer/VBoxContainer/VBoxContainerCredits") ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerLeft" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 254.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainerLeft"]
margin_right = 254.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainerLeft"]
margin_top = 524.0
margin_right = 254.0
margin_bottom = 698.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer"]
margin_right = 18.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="ButtonBack" type="TextureButton" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer"]
margin_left = 22.0
margin_right = 204.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 9 )
texture_click_mask = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer/ButtonBack"]
script = ExtResource( 4 )

[node name="Control5" type="Control" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer"]
margin_left = 208.0
margin_right = 254.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainerLeft"]
margin_top = 702.0
margin_right = 254.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 258.0
margin_right = 1021.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 763.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 763.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Credits"
align = 1
valign = 1

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 763.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="VBoxContainerCredits" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 763.0
margin_bottom = 693.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme = ExtResource( 5 )

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits"]
margin_right = 763.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer5"]
margin_right = 763.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Character Design and Art:"
align = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer5"]
margin_top = 36.0
margin_right = 763.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Diego Almeida"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits"]
margin_top = 137.0
margin_right = 763.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer2"]
margin_right = 763.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Game Design:"
align = 1

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer2"]
margin_top = 36.0
margin_right = 763.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Erik Silva Ferreira"
align = 1

[node name="VBoxContainer6" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits"]
margin_top = 274.0
margin_right = 763.0
margin_bottom = 407.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer6"]
margin_right = 763.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Programming, Sound and Music:"
align = 1

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer6"]
margin_top = 36.0
margin_right = 763.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Joel Gomes"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits"]
visible = false
margin_top = 329.0
margin_right = 763.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label7" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer3"]
margin_right = 763.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Art:"
align = 1

[node name="Label8" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer3"]
margin_top = 36.0
margin_right = 763.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Luciano Abreu"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits"]
margin_top = 411.0
margin_right = 763.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelVersion" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer4"]
margin_right = 763.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Game Name v0.0.0"
align = 1

[node name="LabelStudio" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer4"]
margin_top = 36.0
margin_right = 763.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Muriki Game Studio, 2023"
align = 1

[node name="Label11" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainerCredits/VBoxContainer4"]
margin_top = 72.0
margin_right = 763.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "All rights reserved."
align = 1

[node name="Control4" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 697.0
margin_right = 763.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 1025.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainerLeft/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
